--- a/client/views/partials/admin/orderProcess/createTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/createTruckRequest.html
@@ -25,8 +25,9 @@
                             <ui-select ng-model="truckRequest.customer" theme="select2"
                                        style="min-width: 390px;"
                                        title="Customer *" append-to-body="true">
-                                    <ui-select-match placeholder="Customer *" class="form-control custom-form-control">
-                                    {{$select.selected.userName || userName}}
+
+                                <ui-select-match placeholder="Customer *" class="form-control custom-form-control">
+                                    {{$select || userName}}
                                 </ui-select-match>
                                 <ui-select-choices
                                         repeat="truck in truckOwnersList | propsFilter: {userName: $select.search}">
@@ -68,7 +69,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
                             <input type="text" class="form-control custom-form-control" name="fullName"
-                                   ng-model="truckRequest.name"
+                                   ng-model="truckRequest.email"
                                    placeholder="Email"/>
                         </div>
                         <div class="form-group">
