GPS OrderStatus TrucksType LoadsType GoodsType from mysql and filters in settings module

--- a/client/views/partials/admin/settings/orderStatus.html
+++ b/client/views/partials/admin/settings/orderStatus.html
@@ -5,15 +5,15 @@
             <div class="col-sm-7 pull-right pall-zero">
                 <div class="col-sm-5">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+                        <input type="text" class="form-control" placeholder="Search" ng-model="orderStatus1">
+                        <span class="input-group-addon" ng-click="searchByOrderStatus('',orderStatus1);"><i class="glyphicon glyphicon-search"></i></span>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <select class="form-control">
-                        <option value="" selected>Select</option>
-                        <option>Enabled</option>
-                        <option>Disabled</option>
+                    <select class="form-control" ng-model="status1" ng-change="searchByOrderStatus(status1,'');">
+                        <option value="" selected>Select by Status</option>
+                        <option ng-value="true">Enabled</option>
+                        <option ng-value="false">Disabled</option>
                     </select>
                 </div>
                 <div class="col-sm-2">
@@ -29,8 +29,8 @@
             <td><input type="checkbox"/></td>
             <td data-title="'S No'">{{$index+1}}</td>
             <td data-title="'Title'" sortable="'title'" class="clickable-item">{{type.title}}</td>
-            <td data-title="'Release Truck'" sortable="'releaseTruck'" class="clickable-item">{{type.releaseTruck}}</td>
-            <td data-title="'Status'" sortable="'status'" class="clickable-item">{{type.status}}</td>
+            <td data-title="'Release Truck'" sortable="'releaseTruck'" class="clickable-item">{{type.releaseTruck?'Yes':'No'}}</td>
+            <td data-title="'Status'" sortable="'status'" class="clickable-item">{{type.status?'Enabled':'Disabled'}}</td>
             <td data-title="'Action'">
                 <a href="#" ng-click="editOrderStatus(type._id)" class="edit_icon">
                     <span class="glyphicon glyphicon-pencil"></span></a>
