--- a/client/views/partials/admin/settings/gpsSettings.html
+++ b/client/views/partials/admin/settings/gpsSettings.html
@@ -5,15 +5,15 @@
             <div class="col-sm-7 pull-right pall-zero">
                 <div class="col-sm-5">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+                        <input type="text" class="form-control" placeholder="Search" ng-model="gpsPlan1">
+                        <span class="input-group-addon" ng-click="searchByPlan('gps','',gpsPlan1);"><i class="glyphicon glyphicon-search"></i></span>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <select class="form-control">
-                        <option value="" selected>Select</option>
-                        <option>Enabled</option>
-                        <option>Disabled</option>
+                    <select class="form-control" ng-model="status1" ng-change="searchByPlan('gps',status1,'');">
+                        <option value="" selected>Select by Status</option>
+                        <option ng-value="true">Enabled</option>
+                        <option ng-value="false">Disabled</option>
                     </select>
                 </div>
                 <div class="col-sm-2">
@@ -37,7 +37,7 @@
                 {{plan.durationInMonths}}
             </td>
             <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{plan.amount}}</td>
-            <td data-title="'Status'" sortable="'status'" class="clickable-item">{{plan.status}}</td>
+            <td data-title="'Status'" sortable="'status'" class="clickable-item">{{plan.status?'Enabled':'Disabled'}}</td>
             <td data-title="'Action'" class="clickable-item">
                 <a href="#" ng-click="editPlanPopup(plan._id)" class="edit_icon">
                     <span class="glyphicon glyphicon-pencil"></span>
