--- a/client/views/partials/admin/orderProcess/editTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/editTruckRequest.html
@@ -1,5 +1,20 @@
 <div class="col-xs-12 newCust" ng-controller="orderProcessCtrl" ng-init="initializeEditTruckRequest();">
-    <h4>Edit Truck Request</h4>
+    <div class="col-md-9"><h4>Edit Truck Request</h4></div>
+    <div class="col-md-3">
+        <div class="form-group">
+            Status :
+            <select class="form-control" disabled ng-model="truckRequest.status">
+                <option value="">Status</option>
+                <option>New</option>
+                <option>Processing Query</option>
+                <option>Raised Quotes</option>
+                <option>Booked</option>
+                <option>Denied</option>
+                <option>Booking Requested</option>
+                <option>Accepted Booking</option>
+            </select>
+        </div>
+    </div>
     <div class="col-xs-12">
         <uib-accordion close-others="oneAtATime">
             <div uib-accordion-group class="panel-default" is-open="status.isFirstOpen">
@@ -48,7 +63,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <select  class="form-control"
+                            <select class="form-control"
                                     ng-model="truckRequest.trackingRequired">
                                 <option value="">Trucking Required</option>
                                 <option>YES</option>
@@ -56,11 +71,13 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="fullName" ng-model="truckRequest.loadingCharge"
+                            <input type="text" class="form-control" name="fullName"
+                                   ng-model="truckRequest.loadingCharge"
                                    placeholder="Loading Charge *"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="fullName" ng-model="truckRequest.unloadingCharge"
+                            <input type="text" class="form-control" name="fullName"
+                                   ng-model="truckRequest.unloadingCharge"
                                    placeholder="Unloading Charge *"/>
                         </div>
                     </div>
@@ -75,10 +92,12 @@
                         </div>
 
                         <div class="form-group">
-                            <textarea class="form-control" ng-model="truckRequest.comment" placeholder="comment"></textarea>
+                            <textarea class="form-control" ng-model="truckRequest.comment"
+                                      placeholder="comment"></textarea>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" ng-model="truckRequest.pushMessage" placeholder="push message"></textarea>
+                            <textarea class="form-control" ng-model="truckRequest.pushMessage"
+                                      placeholder="push message"></textarea>
 
                         </div>
                     </div>
@@ -163,66 +182,7 @@
                 </div>
 
             </div>
-            <div uib-accordion-group class="panel-default" ng-click="getTruckRequestComments()">
-                <uib-accordion-heading>
-                    Comments <i class="pull-right glyphicon"
-                                ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !is-open}"></i>
-                </uib-accordion-heading>
 
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="form-group col-sm-2">
-                            <input type="checkbox" ng-model="comment.notifiedStatus"
-                                   ng-true-value="'YES'" ng-false-value="'NO'">Notify
-                        </div>
-                        <div class="form-group col-sm-3">
-
-                            <select ng-model="comment.status" class="form-control">
-                                <option value="">Select status</option>
-                                <option>New</option>
-                                <option>Processing Query</option>
-                                <option>Raised Quotes</option>
-                                <option>Booked</option>
-                                <option>Denied</option>
-                                <option>Booking Requested</option>
-                                <option>Accepted Booking</option>
-
-                            </select>
-
-                        </div>
-                        <div class="form-group col-sm-3">
-                            <input type="text" class="form-control" name="comment" ng-model="comment.comment"
-                                   placeholder="Comment"/>
-                        </div>
-                        <div class="form-group col-sm-3">
-                            <button class="btn btn-info" ng-click="addTruckRequestComment()">Submit</button>
-                        </div>
-
-
-                    </div>
-
-                </div>
-                <div class="row col-sm-12">
-                    <table class="table table-bordered table-hover">
-                        <tr>
-                            <td>S.No</td>
-                            <td>Date</td>
-                            <td>status</td>
-                            <td>Comment</td>
-                            <td>Notify Status</td>
-
-                        </tr>
-                        <tr ng-repeat="comment in commentList">
-                            <td>{{$index+1}}</td>
-                            <td>{{comment.createdAt | date:'medium'}}</td>
-                            <td>{{comment.status}}</td>
-                            <td>{{comment.comment}}</td>
-                            <td>{{comment.notifiedStatus}}</td>
-                        </tr>
-                    </table>
-                </div>
-
-            </div>
             <div uib-accordion-group class="panel-default" ng-click="getTruckRequestQuotes()">
                 <uib-accordion-heading>
                     Quotes <i class="pull-right glyphicon"
@@ -318,7 +278,7 @@
 
                             <select class="form-control" ng-model="loadBooking.registrationNo">
                                 <option value="">Select truck</option>
-                                <option ng-repeat="truck in loadBooking.trucksList" value="{{truck._id}}">
+                                <option ng-repeat="truck in loadBooking.trucksList" value="{{truck.registrationNo}}">
                                     {{truck.registrationNo}}
                                 </option>
 
@@ -355,7 +315,7 @@
                     <div class="col-sm-12">
 
                         <div class="form-group col-sm-4">
-                            <button class="btn btn-info" ng-click="loadBookingForTruckRequest()">Submit</button>
+                            <button class="btn btn-info" ng-click="loadBookingForTruckRequest()">Book Load</button>
                         </div>
 
 
@@ -363,6 +323,66 @@
 
                 </div>
 
+
+            </div>
+            <div uib-accordion-group class="panel-default" ng-click="getTruckRequestComments()">
+                <uib-accordion-heading>
+                    Comments <i class="pull-right glyphicon"
+                                ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !is-open}"></i>
+                </uib-accordion-heading>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group col-sm-2">
+                            <input type="checkbox" ng-model="comment.notifiedStatus"
+                                   ng-true-value="'YES'" ng-false-value="'NO'">Notify
+                        </div>
+                        <div class="form-group col-sm-3">
+
+                            <select ng-model="comment.status" class="form-control">
+                                <option value="">Select status</option>
+                                <option>New</option>
+                                <option>Processing Query</option>
+                                <option>Raised Quotes</option>
+                                <option>Booked</option>
+                                <option>Denied</option>
+                                <option>Booking Requested</option>
+                                <option>Accepted Booking</option>
+
+                            </select>
+
+                        </div>
+                        <div class="form-group col-sm-3">
+                            <input type="text" class="form-control" name="comment" ng-model="comment.comment"
+                                   placeholder="Comment"/>
+                        </div>
+                        <div class="form-group col-sm-3">
+                            <button class="btn btn-info" ng-click="addTruckRequestComment()">Submit</button>
+                        </div>
+
+
+                    </div>
+
+                </div>
+                <div class="row col-sm-12">
+                    <table class="table table-bordered table-hover">
+                        <tr>
+                            <td>S.No</td>
+                            <td>Date</td>
+                            <td>status</td>
+                            <td>Comment</td>
+                            <td>Notify Status</td>
+
+                        </tr>
+                        <tr ng-repeat="comment in commentList">
+                            <td>{{$index+1}}</td>
+                            <td>{{comment.createdAt | date:'medium'}}</td>
+                            <td>{{comment.status}}</td>
+                            <td>{{comment.comment}}</td>
+                            <td>{{comment.notifiedStatus}}</td>
+                        </tr>
+                    </table>
+                </div>
 
             </div>
             <div uib-accordion-group class="panel-default">
@@ -417,63 +437,63 @@
                         </div>
 
                     </div>
-                   <!-- <div class="col-sm-12">
-                        <div class="form-group col-sm-4">
+                    <!-- <div class="col-sm-12">
+                         <div class="form-group col-sm-4">
 
-                            <p>Enable Sms/Email Ads</p>
-                            <ul class="list-inline">
-                                <li>
-                                    <div class="radio">
-                                        <label>
-                                            <input type="radio" value="enable">
-                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                            Enable
-                                        </label>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="radio">
-                                        <label>
-                                            <input type="radio" value="enable">
-                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                            Disable
-                                        </label>
-                                    </div>
-                                </li>
-                            </ul>
+                             <p>Enable Sms/Email Ads</p>
+                             <ul class="list-inline">
+                                 <li>
+                                     <div class="radio">
+                                         <label>
+                                             <input type="radio" value="enable">
+                                             <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                             Enable
+                                         </label>
+                                     </div>
+                                 </li>
+                                 <li>
+                                     <div class="radio">
+                                         <label>
+                                             <input type="radio" value="enable">
+                                             <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                             Disable
+                                         </label>
+                                     </div>
+                                 </li>
+                             </ul>
 
-                        </div>
-                        <div class="form-group col-sm-4">
-                            <p>Status</p>
-                            <ul class="list-inline">
-                                <li>
-                                    <div class="radio">
-                                        <label>
-                                            <input type="radio" value="enable">
-                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                            Enable
-                                        </label>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="radio">
-                                        <label>
-                                            <input type="radio" value="enable">
-                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                            Disable
-                                        </label>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="form-group col-sm-4">
-                            <input type="text" class="form-control" ng-model="truckRequest.name"
-                                   placeholder="Customer Id "/>
-                        </div>
+                         </div>
+                         <div class="form-group col-sm-4">
+                             <p>Status</p>
+                             <ul class="list-inline">
+                                 <li>
+                                     <div class="radio">
+                                         <label>
+                                             <input type="radio" value="enable">
+                                             <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                             Enable
+                                         </label>
+                                     </div>
+                                 </li>
+                                 <li>
+                                     <div class="radio">
+                                         <label>
+                                             <input type="radio" value="enable">
+                                             <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                             Disable
+                                         </label>
+                                     </div>
+                                 </li>
+                             </ul>
+                         </div>
+                         <div class="form-group col-sm-4">
+                             <input type="text" class="form-control" ng-model="truckRequest.name"
+                                    placeholder="Customer Id "/>
+                         </div>
 
 
-                    </div>
--->
+                     </div>
+ -->
 
                 </div>
 
