--- a/client/views/partials/admin/notifications/notificationDashboard.html
+++ b/client/views/partials/admin/notifications/notificationDashboard.html
@@ -4,6 +4,10 @@
         <li ui-sref-active="activated"><a href="#" ui-sref="notifications.avaLoads">Available Load</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="notifications.app">App</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="notifications.lookingForLoad">Looking for Load</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="notifications.listOfEmails">Email Notifications</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="notifications.listOfSms">SMS Notifications</a></li>
+
+
     </ul>
     <ui-view></ui-view>
 </div>
