--- a/client/views/partials/admin/customers/createCustomer.html
+++ b/client/views/partials/admin/customers/createCustomer.html
@@ -2,10 +2,10 @@
     <h4>Create Customer Leads</h4>
     <div class="col-xs-12">
         <uib-accordion>
-            <div uib-accordion-group class="panel-default" is-open="status.isFirstOpen">
+            <div uib-accordion-group class="panel-default" is-open="status.isOpen">
                 <uib-accordion-heading>
                     User Information <i class="pull-right glyphicon"
-                                        ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                        ng-class="{'glyphicon-chevron-down':status.isOpen, 'glyphicon-chevron-right': !status.isOpen}"></i>
                 </uib-accordion-heading>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
@@ -40,10 +40,12 @@
                 </div>
 
             </div>
-            <div uib-accordion-group class="panel-default">
+        </uib-accordion>
+        <uib-accordion>
+            <div uib-accordion-group class="panel-default" is-open="status.isOpenOne">
                 <uib-accordion-heading>
                     Address <i class="pull-right glyphicon"
-                               ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                               ng-class="{'glyphicon-chevron-down': status.isOpenOne, 'glyphicon-chevron-right': !status.isOpenOne}"></i>
                 </uib-accordion-heading>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
@@ -73,10 +75,12 @@
                 </div>
 
             </div>
-            <div uib-accordion-group class="panel-default">
+        </uib-accordion>
+        <uib-accordion>
+            <div uib-accordion-group class="panel-default" is-open="status.isOpenthree">
                 <uib-accordion-heading>
                     Service Info <i class="pull-right glyphicon"
-                                    ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                    ng-class="{'glyphicon-chevron-down': status.isOpenthree, 'glyphicon-chevron-right': !status.isOpenthree}"></i>
                 </uib-accordion-heading>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
@@ -172,10 +176,12 @@
                 </div>
 
             </div>
-            <div uib-accordion-group class="panel-default">
+        </uib-accordion>
+        <uib-accordion>
+            <div uib-accordion-group class="panel-default" is-open="status.isOpenFour">
                 <uib-accordion-heading>
                     Company Details <i class="pull-right glyphicon"
-                                       ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                       ng-class="{'glyphicon-chevron-down': status.isOpenFour, 'glyphicon-chevron-right': !status.isOpenFour}"></i>
                 </uib-accordion-heading>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
@@ -209,10 +215,12 @@
                 </div>
 
             </div>
-            <div uib-accordion-group class="panel-default">
+        </uib-accordion>
+        <uib-accordion>
+            <div uib-accordion-group class="panel-default" is-open="status.isOpenFive">
                 <uib-accordion-heading>
                     Payment Details <i class="pull-right glyphicon"
-                                       ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                       ng-class="{'glyphicon-chevron-down': status.isOpenFive, 'glyphicon-chevron-right': !status.isOpenFive}"></i>
                 </uib-accordion-heading>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
