--- a/client/views/partials/admin/notifications/availableLoads.html
+++ b/client/views/partials/admin/notifications/availableLoads.html
@@ -28,10 +28,10 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Source City*" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-init="getTruckTypes();">
                     <select class="form-control">
                         <option selected>Truck Type*</option>
-                        <option></option>
+                        <option ng-repeat="trucks in getTruckTypes">{{trucks.title}}</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -47,10 +47,10 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Destination City*" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-init="getGoodsTypes();">
                     <select class="form-control">
                         <option selected>Goods Type*</option>
-                        <option></option>
+                        <option ng-repeat="goods in getGoodsTypes">{{goods.title}}</option>
                     </select>
                 </div>
                 <div class="form-group">
