--- a/client/views/partials/admin/notifications/availableTrucks.html
+++ b/client/views/partials/admin/notifications/availableTrucks.html
@@ -13,14 +13,11 @@
 
 
     </table>
-</div>
-
 
 <script type="text/ng-template" id="newGpsTruckNtfcn.html">
 
     <!--<a href="#" class="btn btn-primary" ui-sref="services.gpsDevices"> Cancel</a>-->
     <!--<a href="#" class="btn btn-primary" ng-click="transferDevices()"> Submit</a>-->
-
 
     <div class="modal-header">
         <h3 class="modal-title" id="modal-title">Add GPS Truck Notification</h3>
@@ -42,10 +39,10 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Destination City*" />
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-init="getTruckTypes();">
                     <select class="form-control">
                         <option selected>Truck Type*</option>
-                        <option></option>
+                        <option ng-repeat="trucks in getTruckTypes">{{trucks.title}}</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -85,3 +82,4 @@
         <button class="btn btn-danger" type="button" ng-click="closeGPS()">Cancel</button>
     </div>
 </script>
+</div>
