--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -19,26 +19,33 @@
         </li>
     </ul>
     <div class="clearfix"></div>
-    <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="customerParams">
+    <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center" ng-table="customerParams">
 
         <tbody>
-            <tr ng-repeat="customer in customerLeads">
-                <td>{{$index+1}}</td>
-                <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.name}}</td>
-                <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
-                <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone[0]}}</td>
-                <td data-title="'Date'" sortable="'date'" class="clickable-item">{{customer.createdAt | date:medium}}</td>
-                <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
-                <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erp}}</td>
-                <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gps}}</td>
-                <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.load}}</td>
-                <td class="col-xs-2">
-                    <select class="form-control">
-                        <option ng-repeat="item in leadStatus">{{item}}</option>
-                    </select>
-                </td>
-                <td><a href="#" ui-sref="customers.createCustomer({customerId:customer._id})">Edit</a>/<a href="#" ng-click="delCustomer(customer._id)">Delete</a></td>
-            </tr>
+        <tr ng-repeat="customer in customerLeads">
+            <td>{{$index+1}}</td>
+            <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.name}}</td>
+            <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
+            <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone[0]}}</td>
+            <td data-title="'Reg Date'" sortable="'date'" class="clickable-item">{{customer.createdAt | date:medium}}</td>
+            <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
+            <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erp}}</td>
+            <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gps}}</td>
+            <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.load}}</td>
+            <td class="col-xs-2" data-title="'Lead Status'" >
+                <select class="form-control">
+                    <option ng-repeat="item in leadStatus">{{item}}</option>
+                </select>
+            </td>
+            <td data-title="'Action'" >
+                <a href="#" ui-sref="customers.createCustomer({customerId:customer._id})" class="edit_icon">
+                    <span class="glyphicon glyphicon-pencil"></span>
+                </a>
+                <a href="#" ng-click="delCustomer(customer._id)" class="delete_icon">
+                    <span class="glyphicon glyphicon-trash"></span>
+                </a>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
