--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -2,7 +2,7 @@
     <h4>GPS / ERP Account</h4>
     <div class="col-xs-12">
         <uib-accordion>
-            <div uib-accordion-group class="panel-default" is-open="true">
+            <div uib-accordion-group class="panel-default" is-open="status.isOpen">
                 <uib-accordion-heading>
                     User Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                 </uib-accordion-heading>
@@ -142,9 +142,11 @@
                 </div>
 
             </div>
-            <div uib-accordion-group class="panel-default">
+        </uib-accordion>
+        <uib-accordion>
+            <div uib-accordion-group class="panel-default" is-open="status.isOpenOne">
                 <uib-accordion-heading>
-                    Assign Plans <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                    Assign Plans <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.isOpenOne, 'glyphicon-chevron-right': !status.isOpenOne}"></i>
                 </uib-accordion-heading>
                 <div class="col-xs-12">
                     <div class="col-xs-12 col-sm-4">
