--- a/client/views/partials/admin/services/erpAccounts.html
+++ b/client/views/partials/admin/services/erpAccounts.html
@@ -46,12 +46,15 @@
                 {{account.isActive}}
             </td>
             <td data-title="'Edit/Delete'" sortable="'imei'" class="clickable-item">
-                <a href="#" ui-sref="services.addNewAccount({accountId: account._id})">Edit /</a>
-                <a href="#" ng-click="deleteAccount($index)">Delete</a>
+                <a href="#" ui-sref="services.addNewAccount({accountId: account._id})" class="edit_icon">
+                    <span class="glyphicon glyphicon-pencil"></span></a>
+                <a href="#" ng-click="deleteAccount($index)" class="delete_icon">
+                    <span class="glyphicon glyphicon-trash"></span>
+                </a>
             </td>
         </tr>
-        <tr ng-if="!currentPageOfDevices || currentPageOfDevices.length === 0">
-            <td colspan="8">No drivers Records exist.</td>
+        <tr ng-if="!currentPageOfAccounts || currentPageOfAccounts.length === 0">
+            <td colspan="8">No ERP Accounts exist.</td>
         </tr>
     </table>
 </div>
