--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -26,7 +26,7 @@
                 <td>{{$index+1}}</td>
                 <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.name}}</td>
                 <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
-                <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone[0]}}</td>
+                <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone}}</td>
                 <td data-title="'Date'" sortable="'date'" class="clickable-item">{{customer.createdAt | date:medium}}</td>
                 <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
                 <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erp}}</td>
